--- a/style.css
+++ b/style.css
@@ -194,6 +194,9 @@ nav {
    width: 300px;
 }
 #contact-founders div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 20px 0 0 0;
 }
 #contact-founders img{
